<resources>
    <string name="app_name">BIZZAN</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="back">返回</string>
    <string name="unknown_error">未知错误</string>
    <string name="no_network">当前无网络</string>
    <string name="parse_error">解析异常</string>
    <string name="login_invalid">登录失效，请重新登录！</string>
    <string name="no_data">暂无数据</string>
    <string name="submit">提交</string>
    <string name="exit_again">再按一次退出</string>
    <string name="name">姓名</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_shuru_signup">请输入密码(大于6位的数字、字母组合)</string>
    <string name="new_pwd2_shuru">请再次输入密码</string>
    <string name="photograph">拍照</string>
    <string name="success">成功</string>
    <string name="save">保存</string>
    <string name="Start_downloading">开始下载...请稍候</string>
    <string name="more">更多</string>
    <string name="index">指标</string>
    <string name="hide">隐藏</string>
    <string name="main">主图</string>
    <string name="child">副图</string>
    <string name="delete">删除</string>
    <string name="camera_permission">权限不可用，请开启相机权限</string>
    <string name="storage_permission">权限不可用，请开启存储权限</string>
    <string name="password_realname">请先设置资金密码和实名认证</string>
    <string name="binding_phone_first">请先绑定手机号</string>
    <string name="realname">请去实名认证</string>
    <string name="shangjia">请去商家认证</string>
    <string name="tishi">请完善信息或重新选择图片</string>
    <string name="library_file_exception">图库文件返回异常</string>
    <string name="Incomplete_information">填写信息不完整</string>
    <string name="xieyi">未勾选同意用户协议</string>
    <string name="empty_address">数据有误，地址为空</string>
    <string name="order_details_failed">订单详情获取失败,正在重新获取</string>
    <string name="No_qrcode">未设置二维码地址</string>
    <string name="No_ads">广告信息获取失败，正在重新获取！</string>
    <string name="nationality">国籍</string>
    <string name="china">中国</string>
    <string name="start_bind">开始绑定</string>
    <string name="egional_selection">地区选择</string>
    <string name="select_region" translatable="false">请选择地区</string>
    <string name="select_currency">选择币种</string>
    <string name="change_phone_num">修改手机号</string>
    <string name="changeBindPhoneNum">修改绑定手机号</string>
    <string name="changeBindPhoneNumTip">您正在修改账户绑定的手机号，请进行身份认证</string>
    <string name="receivePhoneCode">原手机能接受验证码</string>
    <string name="unReceivePhoneCode">原手机不能接受验证码</string>
    <string name="unReceivePhoneCodeTip">原手机号不能接收验证码，请联系客服进行修改绑定</string>
    <string name="handsetTailNumber">手机尾号</string>
    <string name="receiveMessageCode">接收到的短信验证码</string>
    <string name="changeLoginPassword">更改登录密码</string>
    <string name="changeLoginPasswordTip1">您已经绑定手机号</string>
    <string name="changeLoginPasswordTip2">修改成功请重新登录</string>
    <string name="oldLoginPassword">旧登录密码</string>
    <string name="newLoginPassword">新登录密码</string>
    <string name="certainPassword">确认密码</string>
    <string name="setMoneyPassword">设置资金密码</string>
    <string name="setMoneyPasswordTip">您正在修改资金密码</string>
    <string name="changeMoneyPassword">修改资金密码</string>
    <string name="oldMoneyPassword">旧资金密码</string>
    <string name="newMoneyPassword">新资金密码</string>
    <string name="certainMoneyPassword">确认资金密码</string>
    <string name="IdCardNumber">身份证号码</string>
    <string name="Upload_success">上传成功</string>
    <string name="home">首页</string>
    <string name="market">行情</string>
    <string name="transaction">交易</string>
    <string name="fabi2">法币交易</string>
    <string name="account">我的</string>
    <string name="four_danjia">单价</string>
    <string name="dz_time">到账时间</string>
    <string name="star_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="jiaoyi_dui">交易对</string>
    <string name="jiaoyi_fangxiang">方向</string>
    <string name="jiaoyi_weituoliang">委托量</string>
    <string name="jiaoyi_yichengjiao">已成交</string>
    <string name="jiaoyi_shouxufei">手续费</string>
    <string name="login_view">登录后可查看</string>
    <string name="login_assets">总资产约(折合USDT)</string>
    <string name="not_logged_in">未登录</string>
    <string name="welcome_to">欢迎来到bizzan.com</string>
    <string name="my_order">我的订单</string>
    <string name="my_ads">我的广告</string>
    <string name="my_message">平台消息</string>
    <string name="my_entrust">我的委托</string>
    <string name="history_trust">历史委托</string>
    <string name="my_credit">身份认证</string>
    <string name="my_version">版本更新</string>
    <string name="has_new_version">发现新版本</string>
    <string name="my_language">语言切换</string>
    <string name="my_setting">设置中心</string>
    <string name="balance">总资产约(合USDT)</string>
    <string name="balance_1">资产管理</string>
    <string name="balance_2">我的资产</string>
    <string name="balance_3">资产流水</string>
    <string name="my_fabi">法币管理</string>
    <string name="logout_confirm">您确定要退出登录？</string>
    <string name="logout_current_account">退出当前账号</string>
    <string name="ctc_title">法币交易</string>
    <string name="ctc_buy_amount_tips">请输入买入数量</string>
    <string name="ctc_amount_tips">请输入50~50000之间的数字</string>
    <string name="ctc_sell_amount_tips">请输入卖出数量</string>
    <string name="message_details">公告</string>
    <string name="remark">备注(Memo)</string>
    <string name="order_appeal">订单申诉</string>
    <string name="appealTip">我们会尽快处理你的申诉请求，请耐心等待</string>
    <string name="appealTip2">请简要描述您申诉的原因（300字以内）</string>
    <string name="chat">正在聊天</string>
    <string name="send_chat">发送</string>
    <string name="recently">刚刚</string>
    <string name="item_buy">买</string>
    <string name="item_sell">卖</string>
    <string name="lishi">历史</string>
    <string name="current_trust">当前委托</string>
    <string name="undone">已撤销</string>
    <string name="traded_trade">已成交</string>
    <string name="trading">交易中</string>
    <string name="trust_detail">交易明细</string>
    <string name="item_time">时间</string>
    <string name="item_cost">成交价</string>
    <string name="item_number">委托量</string>
    <string name="item_charge">手续费</string>
    <string name="all">全部</string>
    <string name="text_buy">买入</string>
    <string name="text_buy_one">购买</string>
    <string name="text_sale">卖出</string>
    <string name="text_price">价格</string>
    <string name="text_number">数量</string>
    <string name="text_number2">数量:</string>
    <string name="text_entrust">委托额</string>
    <string name="text_xian_login">请先登录</string>
    <string name="text_login_disabled">登录信息失效，请重新登录！</string>
    <string name="text_pan">盘口</string>
    <string name="login_entity">请先登录/注册</string>
    <string name="text_entity">暂无数据</string>
    <string name="text_enter_price">请输入价格</string>
    <string name="text_best_price">以最优价格买入</string>
    <string name="text_best_sale">以最优价格卖出</string>
    <string name="text_best_prices">最优价格</string>
    <string name="text_used">可用</string>
    <string name="text_sell_one">出售</string>
    <string name="text_sell_two">卖出</string>
    <string name="text_volume">成交量</string>
    <string name="text_average_price">成交均价</string>
    <string name="text_entrust_num">委托量</string>
    <string name="text_total_deal">成交总额</string>
    <string name="text_total_entrust">委托总额</string>
    <string name="text_turnover">交易额</string>
    <string name="text_24_change">24H量</string>
    <string name="text_actual_deal">已成交</string>
    <string name="marketPrice">市价</string>
    <string-array name="text_type">
        <item>限价委托</item>
        <item>市价委托</item>
    </string-array>
    <string-array name="text_type_array">
        <item>取消选择</item>
        <item>限价委托</item>
        <item>市价委托</item>
    </string-array>
    <string-array name="text_type_param">
        <item>取消选择</item>
        <item>LIMIT_PRICE</item>
        <item>MARKET_PRICE</item>
    </string-array>
    <string-array name="text_direction">
        <item>取消选择</item>
        <item>买</item>
        <item>卖</item>
    </string-array>
    <string name="bhb_deduct">使用BHB抵扣手续费</string>
    <string name="dialog_cancel">不使用</string>
    <string name="dialog_confirm">使用</string>
    <string name="text_repeal">撤销</string>
    <string name="text_wei_price">委托价格</string>
    <string name="dialog_one_title">委托撤单确认</string>
    <string name="dialog_one_one">您是否确认撤单?</string>
    <string name="dialog_one_two">撤单</string>
    <string name="dialog_one_cancel">取消</string>
    <string name="dialog_msg_one">委托价格：</string>
    <string name="dialog_msg_two">委托总额：</string>
    <string name="dialog_msg_three">委托量：</string>
    <string name="dialog_msg_four">类别：</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_two_title_buy">委托买入</string>
    <string name="dialog_two_title_sell">委托卖出</string>
    <string name="dialog_three_title">下单确认</string>
    <string name="dialog_three_one">购买价格</string>
    <string name="dialog_three_two">购买数量</string>
    <string name="dialog_three_three">购买总额</string>
    <string name="dialog_three_ones">出售价格</string>
    <string name="dialog_three_twos">出售数量</string>
    <string name="dialog_three_threes">出售总额</string>
    <string name="dialog_three_msg">提醒：请确认价格再下单，下单后此交易的资金将托管锁定，请放心购买。</string>
    <string name="text_add_favorite">添加自选</string>
    <string name="text_add_fail">添加失败</string>
    <string name="text_add_success">添加成功</string>
    <string name="text_collected">已收藏</string>
    <string name="text_cancel_fail">取消失败</string>
    <string name="text_cancel_success">取消成功</string>
    <string name="order_done">已完成</string>
    <string name="orderdetail">订单详情</string>
    <string name="contact_with_me">跟我联系</string>
    <string-array name="order_status">
        <item>未付款</item>
        <item>已付款</item>
        <item>已完成</item>
        <item>已取消</item>
        <item>申诉中</item>
    </string-array>
    <string name="Payment_countdown">付款倒计时</string>
    <string name="order_information">订单信息</string>
    <string name="Transaction_object">交易对象</string>
    <string name="Order_number">订单编号</string>
    <string name="transaction_price">交易价格</string>
    <string name="transactions_Number">交易数量</string>
    <string name="Trading_time">交易时间</string>
    <string name="Transaction_amount">交易金额</string>
    <string name="payment_information">支付信息</string>
    <string name="paymentTip">用户暂未添加支付宝账户</string>
    <string name="paymentTip2">用户暂未添加微信账户</string>
    <string name="paymentTip3">用户暂未添加银行卡账户</string>
    <string name="order_release">订单放行</string>
    <string name="Payment_done">付款完成</string>
    <string name="Cancel_order">取消订单</string>
    <string name="paymentTip4">对此订单有疑问？</string>
    <string name="paymentTip5">点我申诉</string>
    <string name="Download_failed">下载失败</string>
    <string name="paymentTip6">请输入交易密码</string>
    <string name="Warm_prompt">温馨提示</string>
    <string name="paymentTip7">您将要取消该订单，是否继续？</string>
    <string name="paymentTip8">是否确认已经付款？</string>
    <string name="paymentTip9">您将要申诉该订单，是否继续？</string>
    <string name="paymentTip10">继续</string>
    <string name="text_buy_coin">买入</string>
    <string name="text_sale_coin">卖出</string>
    <string name="chargeMoney">充币</string>
    <string name="savePhoto">保存二维码至相册</string>
    <string name="copyAddress">复制地址</string>
    <string name="send_code">发送验证码</string>
    <string name="rush_address">充币地址</string>
    <string name="charge_money_attention">充值时请输入备注(Memo)</string>
    <string name="charge_money_notification">• 请勿向上述地址充值任何非币种资产，否则资产将不可找回。 \n• 您充值至上述地址后，需要整个区块链网络节点的确认，一般区块链主网3次网络确认后到账。 \n• 您的充值地址不会经常改变，可以重复充值；如有更改，我们会尽量通过网站公告或邮件通知您。 \n• 请务必确认操作环境安全，防止信息被篡改或泄露。</string>
    <string name="lab_submit_title">安全验证</string>
    <string name="lab_submit_phone">手机号码</string>
    <string name="lab_submit_phone_code">手机验证码</string>
    <string name="lab_submit2">提交</string>
    <string name="lab_dialog_cancel">关闭</string>
    <string name="recharge_amount">充值数量</string>
    <string name="recharge_amount_hint">请输入数量</string>
    <string name="recharge_my_address">我的转账地址</string>
    <string name="recharge_input_my_address">我的转账地址</string>
</resources>