<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:gyf="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackDark"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <!--标题-->
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/primaryBackNormal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:scaleType="center"
            android:src="@drawable/icon_back_gray"
            android:visibility="visible" />

        <View
            android:id="@+id/view_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/chargeMoney"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/ibRegist"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:minWidth="48dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:visibility="invisible" />

    </LinearLayout>

    <cn.bizzan.customview.intercept.WonderfulScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryBackDark"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_recharge_type1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAddressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/rush_address"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/usdt_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/usdt_erc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/text_orange"
                        android:paddingLeft="@dimen/dp10"
                        android:paddingTop="3dp"
                        android:paddingRight="@dimen/dp10"
                        android:paddingBottom="3dp"
                        android:text="ERC20"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/usdt_trc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/dp10"
                        android:paddingTop="3dp"
                        android:paddingRight="@dimen/dp10"
                        android:paddingBottom="3dp"
                        android:text="TRC20"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>

            <!--上部TAB栏-->
            <android.support.design.widget.TabLayout
                android:id="@+id/tab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/primaryBackNormal"
                android:visibility="gone"
                app:tabBackground="@null"
                app:tabIndicatorColor="@color/text_orange"
                app:tabSelectedTextColor="@color/text_orange"
                app:tabTextColor="@color/colorPrimary" />


            <ImageView
                android:id="@+id/ivAddress"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:id="@+id/llAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/savePhoto"
                    android:textColor="@color/text_orange"
                    android:textSize="14sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivAddress"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="#0DFFFFFF"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="8dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                tools:text="11111111111111111111" />

            <LinearLayout
                android:id="@+id/llCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/copyAddress"
                    android:textColor="@color/text_orange"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:text="@string/recharge_amount"
                    android:textColor="#cccccc"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/recharge_amount_hint"
                    android:inputType="numberDecimal"
                    android:paddingLeft="5dp"
                    android:textColor="#cccccc"
                    android:textColorHint="@color/primaryTextGray"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/upload_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:background="#0DFFFFFF"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_add_24" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:text="@string/recharge_my_address"
                    android:textColor="#cccccc"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/recharge_input_my_address"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:textColor="#cccccc"
                    android:textColorHint="@color/primaryTextGray"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="25dp"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginBottom="15dp"
                android:background="#ff9900"
                android:gravity="center"
                android:text="@string/lab_submit2"
                android:textColor="#fff"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/layout_memo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:id="@+id/text_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="null"
                    android:textAlignment="center"
                    android:textColor="@color/primaryText"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/charge_money_attention"
                    android:textAlignment="center"
                    android:textColor="@color/text_orange" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_deposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/charge_money_notification"
                android:textColor="#777"
                android:textSize="12sp" />
        </LinearLayout>
    </cn.bizzan.customview.intercept.WonderfulScrollView>
</LinearLayout>
